some more solved

--- a/DayWiseMaterial/Assignments/17th_Sept_FSDS.ipynb
+++ b/DayWiseMaterial/Assignments/17th_Sept_FSDS.ipynb
@@ -4013,7 +4013,64 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The return statement in Python functions is used to specify the value or values that the function should send back to the caller. It marks the end of the function's execution. Here are some examples:\n",
+    "\n",
+    "Example of Returning a single value:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add(a, b):\n",
+    "    return a + b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example of Returning multiple values as a tuple:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_stats(numbers):\n",
+    "    total = sum(numbers)\n",
+    "    average = total / len(numbers)\n",
+    "    return total, average"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example of No return statement (implicitly returns None):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def say_hello(name):\n",
+    "    print(f\"Hello, {name}!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The return statement is crucial for functions that produce results, allowing you to capture and use those results in your code."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -4026,7 +4083,104 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Variable scope in Python refers to where in your code a variable is visible and can be accessed:\n",
+    "\n",
+    "#### Local Variables: \n",
+    "> These are defined within a function and are only accessible within that function. They have local scope.\n",
+    "\n",
+    "#### Global Variables:\n",
+    "> These are defined outside of any function and are accessible throughout the entire program. They have global scope.\n",
+    "\n",
+    "Local variables take precedence over global variables with the same name when accessed within a function. Global variables can be accessed from within functions, but you need to use the global keyword to modify them.\n",
+    "\n",
+    "Example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "10\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Global variable\n",
+    "global_var = 10  \n",
+    "\n",
+    "def my_function():\n",
+    "    # Local variable\n",
+    "    local_var = 5\n",
+    "    # Accessing the local variable\n",
+    "    print(local_var)\n",
+    "    # Accessing the global variable\n",
+    "    print(global_var)  \n",
+    "\n",
+    "my_function()\n",
+    "\n",
+    "# Accessing the global variable outside the function\n",
+    "print(global_var)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this example, local_var is a local variable within my_function, and global_var is a global variable accessible both inside and outside the function.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3. Write a Python program that demonstrates the use of global variables within functions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial value\n",
+      "Global variable value = 10\n",
+      "After increment\n",
+      "Global variable value = 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Global variable\n",
+    "global_variable = 10\n",
+    "\n",
+    "def increment_global():\n",
+    "    # Declare that we're using the global variable\n",
+    "    global global_variable \n",
+    "    global_variable += 1\n",
+    "\n",
+    "def print_global():\n",
+    "    print(f\"Global variable value = {global_variable}\")\n",
+    "\n",
+    "# Prints\n",
+    "print('Initial value')\n",
+    "\n",
+    "print_global()\n",
+    "\n",
+    "increment_global()\n",
+    "\n",
+    "print('After increment')\n",
+    "\n",
+    "print_global()"
    ]
   },
   {
@@ -4034,6 +4188,37 @@
    "metadata": {},
    "source": [
     "### 4. Create a Python function that calculates the factorial of a number and returns it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Factorial of 5 is 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "# function - takes n as input and return factorial of n\n",
+    "def get_factorial(n:int) -> int:\n",
+    "    if(n == 1):\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n * get_factorial(n-1)\n",
+    "    \n",
+    "# Take an input number\n",
+    "num = int(input('Enter a number: '))\n",
+    "\n",
+    "# Get Factorial\n",
+    "factorial = get_factorial(num)\n",
+    "\n",
+    "# Print\n",
+    "print(f'Factorial of {num} is {factorial}')"
    ]
   },
   {
@@ -4048,6 +4233,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Direct Access: Variables defined outside a function are considered global variables and can be accessed directly within the function without any special keyword."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "global_var = 10\n",
+    "\n",
+    "def access_global_variable():\n",
+    "    print(global_var)\n",
+    "\n",
+    "access_global_variable()  # Accesses the global_var from within the function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the global Keyword (for Modification): If you want to modify a global variable from within a function, you need to use the global keyword to indicate that you are referring to the global variable, not creating a new local variable with the same name."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "global_var = 10\n",
+    "\n",
+    "def modify_global_variable():\n",
+    "    global global_var\n",
+    "    global_var = 20\n",
+    "\n",
+    "modify_global_variable()  # Modifies the global_var from within the function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "By default, Python allows you to access global variables within functions, but if you intend to modify them, you need to use the global keyword to indicate your intention to work with the global variable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Lambda Functions and Higher-Order Functions:"
    ]
   },
@@ -4055,10 +4299,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. What are lambda functions in Python, and when are they typically used?\n",
-    "### 2. Write a Python program that uses lambda functions to sort a list of tuples based on the second element.\n",
-    "### 3. Explain the concept of higher-order functions in Python, and provide an example.\n",
-    "### 4. Create a Python function that takes a list of numbers and a function as arguments, applying the function to each element in the list.\n"
+    "### 1. What are lambda functions in Python, and when are they typically used?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Write a Python program that uses lambda functions to sort a list of tuples based on the second element."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Explain the concept of higher-order functions in Python, and provide an example."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Create a Python function that takes a list of numbers and a function as arguments, applying the function to each element in the list."
    ]
   },
   {
@@ -4072,10 +4334,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Describe the role of built-in functions like `len()`, `max()`, and `min()` in Python.\n",
-    "### 2. Write a Python program that uses the `map()` function to apply a function to each element of a list.\n",
-    "### 3. How does the `filter()` function work in Python, and when would you use it?\n",
-    "### 4. Create a Python program that uses the `reduce()` function to find the product of all elements in a list.\n"
+    "### 1. Describe the role of built-in functions like `len()`, `max()`, and `min()` in Python."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Write a Python program that uses the `map()` function to apply a function to each element of a list."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. How does the `filter()` function work in Python, and when would you use it?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### 4. Create a Python program that uses the `reduce()` function to find the product of all elements in a list."
    ]
   },
   {
@@ -4089,7 +4370,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Explain the purpose of docstrings in Python functions and how to write them.\n",
+    "### 1. Explain the purpose of docstrings in Python functions and how to write them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2. Describe some best practices for naming functions and variables in Python, including naming conventions and guidelines."
    ]
   }
