Solved some more questions

--- a/DayWiseMaterial/Assignments/17th_Sept_FSDS.ipynb
+++ b/DayWiseMaterial/Assignments/17th_Sept_FSDS.ipynb
@@ -4306,7 +4306,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Lambda functions, also known as anonymous functions, are small, nameless functions in Python. They are defined using the `lambda` keyword and are typically used for short, simple operations where creating a named function would be overkill.\n",
+    "\n",
+    "Here's the basic syntax of a lambda function:\n",
+    "\n",
+    "```\n",
+    "lambda arguments: expression\n",
+    "```\n",
+    "\n",
+    "Here's an example of a lambda function that calculates the square of a number:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "square = lambda x: x**2\n",
+    "result = square(5)  # result will be 25\n",
+    "\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2. Write a Python program that uses lambda functions to sort a list of tuples based on the second element."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(12, 3), (60, 45), (231, 50), (3, 100)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List of tuples\n",
+    "list_of_tuples = [(231, 50), (12, 3), (3, 100), (60, 45)]\n",
+    "\n",
+    "# Sorting based on the second element of each tuple\n",
+    "sorted_list_of_tuples = sorted(list_of_tuples, key=lambda x: x[1])\n",
+    "\n",
+    "# print\n",
+    "print(sorted_list_of_tuples)"
    ]
   },
   {
@@ -4320,7 +4382,84 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Higher-order functions in Python are functions that can take other functions as arguments, return functions as results, or both. Essentially, they treat functions as first-class citizens, allowing you to manipulate and work with functions in the same way you would with other data types like integers or strings. This concept is closely related to functional programming.\n",
+    "\n",
+    "Here's an example of a higher-order function:\n",
+    "\n",
+    "```\n",
+    "def apply_operation(func, x, y):\n",
+    "    \"\"\"This higher-order function applies a given function 'func' to 'x' and 'y'.\"\"\"\n",
+    "    return func(x, y)\n",
+    "```\n",
+    "\n",
+    "##### Define some simple functions to be used with apply_operation\n",
+    "```\n",
+    "def add(a, b):\n",
+    "    return a + b\n",
+    "\n",
+    "def subtract(a, b):\n",
+    "    return a - b\n",
+    "\n",
+    "def multiply(a, b):\n",
+    "    return a * b\n",
+    "```\n",
+    "##### Using apply_operation with different functions\n",
+    "```\n",
+    "result1 = apply_operation(add, 5, 3)       # Result: 8 (5 + 3)\n",
+    "result2 = apply_operation(subtract, 10, 4)  # Result: 6 (10 - 4)\n",
+    "result3 = apply_operation(multiply, 2, 7)  # Result: 14 (2 * 7)\n",
+    "```\n",
+    "In this example, apply_operation is a higher-order function that takes another function (func) along with two arguments (x and y) and applies func to x and y. We then define three simple functions (add, subtract, and multiply) that can be passed to apply_operation. Depending on which function is passed, it performs different operations.\n",
+    "\n",
+    "Higher-order functions are powerful because they allow you to write more generic and reusable code, enabling you to abstract away repetitive patterns and promote code modularity. They are commonly used in functional programming paradigms and are an essential concept in languages like Python."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 4. Create a Python function that takes a list of numbers and a function as arguments, applying the function to each element in the list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n",
+      "[2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def apply_function_to_list(func, num_list):\n",
+    "    \"\"\"Applies the given function to each element in the list and returns the results.\"\"\"\n",
+    "    result = []\n",
+    "    for num in num_list:\n",
+    "        result.append(func(num))\n",
+    "    return result\n",
+    "\n",
+    "# Example functions to use with apply_function_to_list\n",
+    "def square(x):\n",
+    "    return x ** 2\n",
+    "\n",
+    "def double(x):\n",
+    "    return x * 2\n",
+    "\n",
+    "# Example usage:\n",
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "# Apply the 'square' function to each element in the 'numbers' list\n",
+    "squared_numbers = apply_function_to_list(square, numbers)\n",
+    "print(squared_numbers)  # Output: [1, 4, 9, 16, 25]\n",
+    "\n",
+    "# Apply the 'double' function to each element in the 'numbers' list\n",
+    "doubled_numbers = apply_function_to_list(double, numbers)\n",
+    "print(doubled_numbers)  # Output: [2, 4, 6, 8, 10]"
    ]
   },
   {
