Completed the assignment

--- a/DayWiseMaterial/Assignments/17th_Sept_FSDS.ipynb
+++ b/DayWiseMaterial/Assignments/17th_Sept_FSDS.ipynb
@@ -4480,7 +4480,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Built-in functions like `len()`, `max()`, and `min()` in Python serve specific roles in working with data and collections:\n",
+    "\n",
+    "`len()`:\n",
+    "\n",
+    "Role: Returns the number of items (elements) in a collection such as a list, tuple, string, or dictionary.\n",
+    "Example:\n",
+    "```\n",
+    "my_list = [1, 2, 3, 4, 5]\n",
+    "length = len(my_list)  # Returns 5\n",
+    "```\n",
+    "\n",
+    "`max()`:\n",
+    "\n",
+    "Role: Returns the largest item in an iterable or among multiple arguments.\n",
+    "Example:\n",
+    "```\n",
+    "numbers = [1, 5, 2, 7, 3]\n",
+    "max_value = max(numbers)  # Returns 7\n",
+    "```\n",
+    "\n",
+    "`min()`:\n",
+    "\n",
+    "Role: Returns the smallest item in an iterable or among multiple arguments.\n",
+    "Example:\n",
+    "```\n",
+    "numbers = [1, 5, 2, 7, 3]\n",
+    "min_value = min(numbers)  # Returns 1\n",
+    "```\n",
+    "\n",
+    "These built-in functions are useful for common tasks when working with data. `len()` is handy for finding the size of collections, while `max()` and `min()` help in identifying the largest and smallest values within data sets. They are part of Python's standard library and can simplify coding when dealing with these specific operations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2. Write a Python program that uses the `map()` function to apply a function to each element of a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 9, 16, 25, 36, 49]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to return the square of number\n",
+    "def square(x):\n",
+    "    return x*x\n",
+    "\n",
+    "# List of numbers\n",
+    "list_of_numbers = [2, 3, 4, 5, 6, 7]\n",
+    "\n",
+    "# Map the elements to square of numbers\n",
+    "map_obj = map(square, list_of_numbers)\n",
+    "\n",
+    "# Result\n",
+    "result = list(map_obj)\n",
+    "\n",
+    "# Print\n",
+    "print(result)"
    ]
   },
   {
@@ -4494,8 +4561,84 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The `filter()` function in Python is used to selectively extract elements from an iterable (like a list) based on a specific condition. It takes two arguments: a function and an iterable.\n",
+    "\n",
+    "Here's how it works:\n",
+    "\n",
+    "#### Function:\n",
+    "The first argument (function) is a function that returns a Boolean value (True or False). This function is applied to each element in the iterable.\n",
+    "\n",
+    "#### Iterable:\n",
+    "The second argument (iterable) is the sequence of elements from which you want to filter.\n",
+    "\n",
+    "The `filter()` function then returns an iterator containing the elements for which the condition in the function evaluates to True.\n",
+    "\n",
+    "#### When would you use it?\n",
+    "The `filter()` function is useful when you need to extract specific elements from a collection based on a condition, making it a powerful tool for data filtering and processing. In other words, `filter()` function is used when you need to selectively extract elements from an iterable based on a specific condition.\n",
+    "\n",
+    "For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def is_positive(num):\n",
+    "    return num > 0\n",
+    "\n",
+    "numbers = [-2, -1, 0, 1, 2, 3, 4]\n",
+    "\n",
+    "positive_numbers = filter(is_positive, numbers)\n",
+    "\n",
+    "print(list(positive_numbers))  # Output: [1, 2, 3, 4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "### 4. Create a Python program that uses the `reduce()` function to find the product of all elements in a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The product of all elements in the list is: 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import reduce\n",
+    "\n",
+    "# Function return the product of two numbers\n",
+    "def multiply(x, y):\n",
+    "    return x * y\n",
+    "\n",
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "# Find product of all elements\n",
+    "product = reduce(multiply, numbers)\n",
+    "\n",
+    "# Print\n",
+    "print(f\"The product of all elements in the list is: {product}\")\n"
    ]
   },
   {
@@ -4516,7 +4659,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "*Docstrings* in Python are special strings used to document functions, modules, and classes. They serve as a form of inline documentation to describe what a piece of code does, what parameters it accepts, and what it returns.\n",
+    "\n",
+    "To write a docstring, you enclose the description in *triple quotes* (''' or \"\"\") and place it as the first statement within a function, module, or class.\n",
+    "\n",
+    "Here's an example of a function with a docstring:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_average(numbers):\n",
+    "    \"\"\"\n",
+    "    Calculate the average of a list of numbers.\n",
+    "\n",
+    "    Args:\n",
+    "        numbers (list): A list of numerical values.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: The average of the input numbers.\n",
+    "\n",
+    "    Example:\n",
+    "        >>> calculate_average([1, 2, 3, 4, 5])\n",
+    "        3.0\n",
+    "    \"\"\"\n",
+    "    if not numbers:\n",
+    "        return 0  # Handle the case of an empty list.\n",
+    "    return sum(numbers) / len(numbers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Explanation**:\n",
+    "\n",
+    "The docstring begins and ends with triple quotes, providing a clear visual indicator.\n",
+    "\n",
+    "It includes a brief description of what the function does.\n",
+    "\n",
+    "The **\"Parameters\"** section describes the input(s) the function expects, along with their types and any additional information.\n",
+    "\n",
+    "The **\"Returns\"** section explains what the function will return, including the type of the return value.\n",
+    "\n",
+    "Docstrings are important for maintaining well-documented code. They make it easier for other developers (and yourself in the future) to understand and use your code. Additionally, tools like IDEs, documentation generators, and linters can use docstrings to provide helpful information and perform static code analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2. Describe some best practices for naming functions and variables in Python, including naming conventions and guidelines."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here are some best practices and naming conventions for naming functions and variables in Python:\n",
+    "\n",
+    "1. **Keep Names Concise but Informative**:\n",
+    "Names should be short enough to be easily typed and read, but long enough to convey their purpose.\n",
+    "\n",
+    "2. **Avoid Ambiguous Names**:\n",
+    "Names should be specific and clear, avoiding any ambiguity about their purpose or usage.\n",
+    "\n",
+    "3. **Use Singular Nouns for Variables**:\n",
+    "Variable names should typically represent a single item, so using singular nouns is usually more appropriate than plural nouns.\n",
+    "\n",
+    "4. **Use Plural Nouns for Collections**:\n",
+    "When naming variables that represent collections or sequences of items, use plural nouns. For example, students, animals.\n",
+    "\n",
+    "5. **Avoid Using Built-in Names**:\n",
+    "Avoid using names of built-in functions, modules, or keywords (e.g., list, str, if, for) for your own variables or functions.\n",
+    "\n",
+    "6. **Prefix Names for Specific Contexts**:\n",
+    "If a variable or function is context-specific, consider adding a prefix to indicate its purpose. For example, user_name or calculation_result.\n",
+    "\n",
+    "7. **Be Mindful of Case Sensitivity**:\n",
+    "Remember that Python is case-sensitive. my_variable and My_Variable would be considered as two different variables.\n",
+    "\n",
+    "8. **Use Verb-Noun Pairings for Functions**:\n",
+    "Start function names with a verb that describes the action it performs, followed by a noun representing the target or subject of the action.\n",
+    "\n",
+    "9. **Avoid Using Single Underscores as Prefixes**:\n",
+    "In general, a single underscore at the beginning of a name (e.g., _variable) is used to indicate that a variable or function is intended for internal use within a module.\n",
+    "\n",
+    "10. **Use Double Underscores for Special Methods**:\n",
+    "In classes, names with double underscores (e.g., __init__, __str__) have special meanings in Python and should be used for specific purposes like constructors and operator overloading.\n",
+    "\n",
+    "11. **Be Consistent**:\n",
+    "Maintain consistent naming conventions throughout your codebase to ensure readability and reduce cognitive load.\n",
+    "\n",
+    "12. **Avoid Using Confusing Names**:\n",
+    "Avoid using names that are easily confused with other common terms or conventions.\n",
+    "\n",
+    "By following these best practices, you can create code that is more readable, maintainable, and easier to work with for both yourself and other developers."
    ]
   }
  ],
