2 more questions done

--- a/DayWiseMaterial/Assignments/7th_Oct_OOPs_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/7th_Oct_OOPs_Assignment.ipynb
@@ -263,6 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Class book to represent a book in library\n",
     "class Book:\n",
     "    # Init duunder with default value of is_borrowed = False\n",
     "    def __init__(self, title, author, ISBN, is_borrowed = False):\n",
@@ -285,10 +286,12 @@
     "        else:\n",
     "            return f\"'{self.title}' is not currently borrowed.\"\n",
     "\n",
+    "    # dunder method for str of book\n",
     "    def __str__(self):\n",
     "        return f\"Title: {self.title}, Author: {self.author}, ISBN: {self.ISBN}\"\n",
     "\n",
     "\n",
+    "# Class to represent a Book library\n",
     "class BookLibrary:\n",
     "    # Initialize the Book Library with empty list\n",
     "    def __init__(self):\n",
@@ -384,10 +387,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Class to represent Product in the Inventory System\n",
+    "class Product:\n",
+    "    def __init__(self, product_id, name, price, quantity=0):\n",
+    "        self.product_id = product_id\n",
+    "        self.name = name\n",
+    "        self.price = price\n",
+    "        self.quantity = quantity\n",
+    "\n",
+    "    def update_quantity(self, new_quantity):\n",
+    "        self.quantity = new_quantity\n",
+    "    \n",
+    "    # Dunder method for str of product - used for printing product details\n",
+    "    def __str__(self):\n",
+    "        return f\"Product ID: {self.product_id}, Name: {self.name}, Price: ${self.price}, Quantity: {self.quantity}\"\n",
+    "\n",
+    "# Class to represent Inventory System\n",
+    "class InventorySystem:\n",
+    "    def __init__(self):\n",
+    "        self.products = []\n",
+    "\n",
+    "    def add_product(self, product):\n",
+    "        self.products.append(product)\n",
+    "\n",
+    "    def update_quantity(self, product_id, new_quantity):\n",
+    "        for product in self.products:\n",
+    "            if product.product_id == product_id:\n",
+    "                product.update_quantity(new_quantity)\n",
+    "                return f\"Quantity updated for Product ID {product_id}.\"\n",
+    "        return f\"Product ID {product_id} not found.\"\n",
+    "\n",
+    "    def display_available_products(self):\n",
+    "        print('Inventory is as below: ')\n",
+    "        if self.products:\n",
+    "            print(\"\\n\".join(str(product) for product in self.products))\n",
+    "        else:\n",
+    "            print(\"No products available in the inventory.\")\n",
+    "        print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inventory is as below: \n",
+      "Product ID: 1, Name: MacBook, Price: $999.99, Quantity: 10\n",
+      "Product ID: 2, Name: iPhone, Price: $699.99, Quantity: 20\n",
+      "Product ID: 3, Name: AirPod, Price: $399.99, Quantity: 20\n",
+      "Product ID: 4, Name: Mobile Charger, Price: $199.99, Quantity: 0\n",
+      "\n",
+      "Quantity updated for Product ID 1.\n",
+      "Quantity updated for Product ID 3.\n",
+      "Quantity updated for Product ID 4.\n",
+      "Inventory is as below: \n",
+      "Product ID: 1, Name: MacBook, Price: $999.99, Quantity: 8\n",
+      "Product ID: 2, Name: iPhone, Price: $699.99, Quantity: 20\n",
+      "Product ID: 3, Name: AirPod, Price: $399.99, Quantity: 15\n",
+      "Product ID: 4, Name: Mobile Charger, Price: $199.99, Quantity: 15\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create object of inventory system\n",
+    "inventory_system = InventorySystem()\n",
+    "\n",
+    "# Create Products\n",
+    "product1 = Product(1, \"MacBook\", 999.99, 10)\n",
+    "product2 = Product(2, \"iPhone\", 699.99, 20)\n",
+    "product3 = Product(3, \"AirPod\", 399.99, 20)\n",
+    "product4 = Product(4, \"Mobile Charger\", 199.99)\n",
+    "\n",
+    "# Add products to the inventory\n",
+    "inventory_system.add_product(product1)\n",
+    "inventory_system.add_product(product2)\n",
+    "inventory_system.add_product(product3)\n",
+    "inventory_system.add_product(product4)\n",
+    "\n",
+    "inventory_system.display_available_products()\n",
+    "\n",
+    "print(inventory_system.update_quantity(1, 8))\n",
+    "print(inventory_system.update_quantity(3, 15))\n",
+    "print(inventory_system.update_quantity(4, 15))\n",
+    "\n",
+    "inventory_system.display_available_products()"
+   ]
   },
   {
    "cell_type": "markdown",
