One more question solved

--- a/DayWiseMaterial/Assignments/7th_Oct_OOPs_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/7th_Oct_OOPs_Assignment.ipynb
@@ -491,10 +491,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Class representing a Shape\n",
+    "class Shape:\n",
+    "    # Initialize dunder method\n",
+    "    # Width and height have default value as None\n",
+    "    # Assumption - if only length is given then it is square with all same same dimensions\n",
+    "    # if only length and width is given then it is rectangle\n",
+    "    # If three are given then it is cuboid\n",
+    "    def __init__(self, length, width=None, height=None):\n",
+    "        self.length = length\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "\n",
+    "    def calculate_area(self):\n",
+    "        if self.width is None and self.height is None:\n",
+    "            return f\"The area of the square is: {self.length ** 2}\"\n",
+    "        elif self.height is None:\n",
+    "            return f\"The area of the rectangle is: {self.length * self.width}\"\n",
+    "        else:\n",
+    "            return f\"The surface area of the cuboid is: {2 * (self.length * self.width + self.length * self.height + self.width * self.height)}\"\n",
+    "\n",
+    "    def calculate_perimeter(self):\n",
+    "        if self.width is None and self.height is None:\n",
+    "            return f\"The perimeter of the square is: {4 * self.length}\"\n",
+    "        elif self.height is None:\n",
+    "            return f\"The perimeter of the rectangle is: {2 * (self.length + self.width)}\"\n",
+    "        else:\n",
+    "            return f\"The perimeter of the cuboid is not applicable.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the square is: 36\n",
+      "The perimeter of the square is: 24\n",
+      "The area of the rectangle is: 72\n",
+      "The perimeter of the rectangle is: 34\n",
+      "The surface area of the cuboid is: 310\n",
+      "The perimeter of the cuboid is not applicable.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Create three shapes Square, Rectangle and Cuboid respectively\n",
+    "square = Shape(6)\n",
+    "rectangle = Shape(9, 8)\n",
+    "cuboid = Shape(5, 7, 10)\n",
+    "\n",
+    "print(square.calculate_area())\n",
+    "print(square.calculate_perimeter())\n",
+    "\n",
+    "print(rectangle.calculate_area())  #\n",
+    "print(rectangle.calculate_perimeter())\n",
+    "\n",
+    "print(cuboid.calculate_area())\n",
+    "print(cuboid.calculate_perimeter()) "
+   ]
   },
   {
    "cell_type": "markdown",
